# nexus-framework

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  NEXUS_BUILD_LOG.md  NEXUS_COMPLETE_ROADMAP.md  NEXUS_FINAL_DEV_PLAN.md  NEXUS_IMPLEMENTATION_ROADMAP.md  NEXUS_INTEGRATION_ROADMAP.md  NEXUS_PRD.md  QUICKSTART.md  README.md  _write.py  complex_performance_test.py  nexus.example.yaml  nexus.yaml  nexus_demo.py  perf_test.py  performance_test_fixed.py  pyproject.toml  run_nexus_agent.py  test_kimi_llm.py  test_nvidia_llm.py
.a0proj/: project.json
.a0proj/memory/: index.faiss  index.faiss.sha256  index.pkl  knowledge_import.json
.github/workflows/: ci.yml
.learnings/: ERRORS.md  LEARNINGS.md
benchmarks/: user_benchmark.py
docker/: Dockerfile  docker-compose.yml  kubernetes.yml
docs/api/: README.md
docs/architecture/: overview.md
docs/guide/: getting-started.md
examples/hello-nexus/: nexus.yaml
examples/llm-chat/: example.py
examples/multi-agent/: example.py
examples/security-demo/: example.py
examples/simple-agent/: example.py
examples/workflow/: example.py
meta_agents/backends/: base.py  hermes_backend.py
meta_agents/cli/: main.py
meta_agents/config/: loaders.py  meta_config.py
meta_agents/models/: agents.py  memory.py  projects.py  skills.py
meta_agents/utils/: fs.py  logging.py
nexus/: __init__.py
nexus/acl/: __init__.py  acl.py
nexus/api/: __init__.py  rest.py
nexus/behavior/: goals.py  (+4 more)
scripts/: benchmark_context.py  benchmark_di_container.py  benchmark_memory.py  benchmark_messages.py
(+82 files in other folders)
